--- a/.github/workflows/uitestpipeline.yml
+++ b/.github/workflows/uitestpipeline.yml
@@ -32,6 +32,7 @@ jobs:
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
       
     - name: Clone mobile app repo
-      run: |
-        git config --global url.https://github.com/.insteadOf git://github.com/
-        git clone https://github.com/truong-dang-gft/demo-android-dice-roller-images
+      uses: actions/checkout@master
+      with:
+        repository: truong-dang-gft/demo-android-dice-roller-images
+        token: ${{ secrets.TRUONG_GITHUB_TOKEN }}
