--- a/.github/workflows/uitestpipeline.yml
+++ b/.github/workflows/uitestpipeline.yml
@@ -65,4 +65,5 @@ jobs:
         echo no | avdmanager create avd --force --name Pixel_2_API_33 --abi arm64-v8a --package 'system-images;android-33-ext5;google_apis_playstore;arm64-v8a'
         emulator -avd Pixel_2_API_33 -wipe-data -no-snapshot &
         waitForEmulatorToStart
+      shell: bash
         
