--- a/.github/workflows/uitestpipeline.yml
+++ b/.github/workflows/uitestpipeline.yml
@@ -63,8 +63,8 @@ jobs:
           done
         }
         
-        sdkmanager --list
-        echo no | avdmanager create avd --force --name Pixel_2_API_33 --abi arm64-v8a --package 'system-images;android-33-ext5;google_apis_playstore;arm64-v8a'
+        sdkmanager "system-images;android-33-ext5;google_apis_playstore;x86_64"
+        echo no | avdmanager create avd --force --name Pixel_2_API_33 --abi x86_64 --package "system-images;android-33-ext5;google_apis_playstore;x86_64"
         emulator -avd Pixel_2_API_33 -wipe-data -no-snapshot &
         waitForEmulatorToStart
       shell: bash
