--- a/.github/workflows/uitestpipeline.yml
+++ b/.github/workflows/uitestpipeline.yml
@@ -31,6 +31,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get install pulseaudio
+        npm install -g appium
+        appium driver install uiautomator2
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
@@ -109,4 +111,20 @@ jobs:
         
         installApk
       shell: bash
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+
+    - name: Clone appium kotlin repo
+      uses: actions/checkout@master
+      with:
+        repository: truong-dang-gft/demo-appium-kotlin
+        token: ${{ secrets.TRUONG_GITHUB_TOKEN }}
+
+    - name: Build and run cucumber tests
+      run: |
+        ./gradlew cucumber --tags @demo
         
