--- a/.github/workflows/uitestpipeline.yml
+++ b/.github/workflows/uitestpipeline.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         sudo apt-get install pulseaudio
         npm install -g appium
-        appium driver install uiautomator2
+        appium driver install uiautomator2@2.25.2
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
