--- a/.github/workflows/ui-test.yml
+++ b/.github/workflows/ui-test.yml
@@ -7,6 +7,10 @@ on:
     branches: [ "master" ]
   workflow_dispatch:
     inputs:
+      uiautomator2Version:
+        description: 'Version of uiautomator2'
+        required: true
+        default: '2.25.2'
       logLevel:
         description: 'Log level'
         required: true
@@ -36,7 +40,7 @@ jobs:
       run: |
         sudo apt-get install pulseaudio
         npm install -g appium
-        appium driver install uiautomator2@2.25.2
+        appium driver install uiautomator2@${{ github.event.inputs.uiautomator2Version }}
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
